currency list, page, graph

--- a/src/pages/profile-page/ui/buttons-block.scss
+++ b/src/pages/profile-page/ui/buttons-block.scss
@@ -1,6 +1,6 @@
 .items {
   display: grid;
-  grid-template-areas: 'add analytics' 'about about';
+  grid-template-areas: 'add analytics' 'about about' 'reqs reqs';
   grid-template-rows: 80px 80px;
   grid-template-columns: 90px 195px;
   gap: 15px;
@@ -78,6 +78,34 @@
       color: #000;
       font-size: 12.6512px;
       font-weight: 600;
+    }
+  }
+
+  .reqs {
+    grid-area: reqs;
+    padding: 18px;
+    display: grid;
+    grid-template-areas: 'title pageIcon' 'subTitle pageIcon';
+    justify-content: space-between;
+
+    .title {
+      grid-area: title;
+      font-weight: 700;
+      font-size: 16px;
+    }
+    .subTitle {
+      grid-area: subTitle;
+      color: #ffffff50;
+      font-size: 10px;
+    }
+    .pageIcon {
+      grid-area: pageIcon;
+      svg {
+        align-self: center;
+        background: #262626;
+        border-radius: 50px;
+        padding: 9px;
+      }
     }
   }
 }
