--- a/src/shared/ui/Input/input.module.scss
+++ b/src/shared/ui/Input/input.module.scss
@@ -37,6 +37,10 @@ input:-internal-autofill-selected {
   }
 }
 
+.danger {
+  border-color: red;
+}
+
 .WithTitleInput {
   display: flex;
   flex-direction: column;
