--- a/src/shared/ui/Tabs/tabs.scss
+++ b/src/shared/ui/Tabs/tabs.scss
@@ -2,12 +2,20 @@
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 100%;
+  max-width: 100%;
+  overflow: hidden;
   .titlesContainer {
     display: flex;
-    gap: 10px;
+    overflow-x: auto;
+    padding: 5px 0;
+    gap: 20px;
   }
+
   .title {
-    padding-bottom: 5px;
+    min-width: max-content;
+    width: max-content;
+    padding-bottom: 10px;
     font-weight: 700;
     font-size: 16px;
     position: relative;
