--- a/src/shared/ui/currency-template/currency-template.scss
+++ b/src/shared/ui/currency-template/currency-template.scss
@@ -14,6 +14,11 @@
     align-self: end;
     background: red;
     border-radius: 50px;
+    span {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+    }
   }
   .rightBottom {
     grid-area: RightBottom;
