--- a/src/pages/buy-currency-page/buy-currency-page.scss
+++ b/src/pages/buy-currency-page/buy-currency-page.scss
@@ -46,3 +46,9 @@
   background: #151515;
   border-radius: 5px;
 }
+
+.blockButton {
+  text-align: center;
+  font-weight: bold;
+  font-size: 16px;
+}
