--- a/src/app/ui/app.module.scss
+++ b/src/app/ui/app.module.scss
@@ -115,6 +115,12 @@ p {
     }
   }
 
+  &.success {
+    .title {
+      color: green;
+    }
+  }
+
   .title {
     font-weight: bold;
     font-size: 14px;
