--- a/src/pages/history-page/history.scss
+++ b/src/pages/history-page/history.scss
@@ -5,6 +5,10 @@
   justify-content: center;
 
   .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     .purpose {
       grid-area: purpose;
     }
