--- a/src/shared/ui/currency-template/currency-template.scss
+++ b/src/shared/ui/currency-template/currency-template.scss
@@ -8,6 +8,8 @@
 
   .icon {
     grid-area: icon;
+    width: 42px;
+    height: 42px;
     justify-self: start;
     align-self: end;
     border-radius: 50px;
