--- a/src/pages/currency-page/tabs/tabs.scss
+++ b/src/pages/currency-page/tabs/tabs.scss
@@ -23,4 +23,27 @@
     margin-top: 70px;
     gap: 15px;
   }
+  .periodButtons {
+    display: flex;
+    align-items: center;
+    .periodButton {
+      font-size: 10px;
+      font-weight: bold;
+      padding: 5px 7px;
+      border-radius: 10px;
+      &.acitve {
+        background: #1f1f1f;
+      }
+    }
+  }
+}
+
+.tooltip {
+  display: grid;
+  & span:first-child {
+    font-weight: bold;
+  }
+  & span:nth-child(2) {
+    font-size: 10;
+  }
 }
